# qmi-framework

./: .gitignore  CONTRIBUTING.md  Makefile.am  README.md  autogen.sh  build_script.sh  configure.ac  qmi-framework.pc.in
.github/workflows/: build_linux_android.yml  build_linux_gnu.yml  codeql.yml  pull-request.yml
common/: Makefile.am  common_v01.c  qmi_common.h
include/: common_v01.h  qcsi.h  qcsi_target_ext.h  qmi_cci.h  qmi_cci_target_ext.h  qmi_client.h  qmi_csi.h  qmi_idl_lib.h  qmi_idl_lib_internal.h
qcci/: Makefile.am  qcci.c  qcci_common.c  qcci_common.h  qcci_internal.h  qcci_os.c  qcci_os.h  qcci_xport_qrtr.c
qcsi/: Makefile.am  qcsi_common.c  qcsi_common.h  qcsi_os.c  qcsi_os.h  qcsi_xport_qrtr.c
qencdec/: Makefile.am  qmi_idl_accessor.c  qmi_idl_lib.c  qmi_idl_lib_target.h
tests/: Makefile.am  qcci_test.c  qcsi_test.c  qcsi_test_ping.c  test_service_v01.c  test_service_v01.h
